Update code for chapter 03